[zoom-image-overflow] [Image] | (UX) | Stop large portrait images from overflowing in zoom view
After removing the explicit dimension calculations for the zoom view,
large portrait images started overlfowing and causing the zoom modal
to have a scroll bar.

Bringing the calculations back here, while still implementing the `scale`
feature that was added since the calculations were previously removed.

See [non-broken prod code](https://github.com/Khan/perseus/commit/3f091b70cbeb65679e52e494fbb25bea0587811d#diff-ba490e8bdb7ae21cbdb97bb6f2ceb1853dcb0aa5dd26b0aa27ebb9c3e595c22a) for reference.

Issue: none

Test plan:
See regression stories in the checks below.

Storybook:
- `/?path=/story/widgets-image-visual-regression-tests-interactions--zoom-clicked-large-portrait-image`
- `/?path=/story/widgets-image-visual-regression-tests-interactions--zoom-clicked-large-image`
- `/?path=/story/widgets-image-visual-regression-tests-interactions--zoom-clicked-state`
- `/?path=/story/widgets-image-visual-regression-tests-interactions--zoom-clicked-with-graphie-image`
- `/?path=/story/widgets-image-widget-demo--image-with-scaled-sizes`

--- a/packages/perseus/src/components/zoomed-image-view.module.css
+++ b/packages/perseus/src/components/zoomed-image-view.module.css
@@ -11,6 +11,7 @@
 .imageContainer {
     /* Don't let large images overflow out of the viewport. */
     max-width: calc(100vw - var(--wb-sizing-size_640));
+    max-height: calc(100vh - var(--wb-sizing-size_640));
 }
 
 @media (max-width: 767px) {
@@ -25,5 +26,6 @@
     .imageContainer {
         /* On mobile, dialog margin is 0 so the full viewport is available. */
         max-width: 100vw;
+        max-height: 100vh;
     }
 }
